// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The commands handlers checkinCommand opens the checkin model 1`] = `
Array [
  Object {
    "trigger_id": "trigger",
    "view": Object {
      "blocks": Array [
        Object {
          "block_id": "0",
          "element": Object {
            "action_id": "0",
            "initial_value": "",
            "multiline": true,
            "type": "plain_text_input",
          },
          "label": Object {
            "emoji": true,
            "text": "questions",
            "type": "plain_text",
          },
          "type": "input",
        },
      ],
      "callback_id": "checkin",
      "private_metadata": "{\\"channelId\\":\\"C01LQPT2LMD\\"}",
      "submit": Object {
        "text": "Submit",
        "type": "plain_text",
      },
      "title": Object {
        "text": "Manual Checkin",
        "type": "plain_text",
      },
      "type": "modal",
    },
  },
]
`;

exports[`The commands handlers checkinCommand posts an ephemeral message when no standup exists 1`] = `
Array [
  Object {
    "channel": "channel",
    "text": "There's no standup in this channel. Feel free to create one with /standup",
    "user": "user",
  },
]
`;

exports[`The commands handlers scrumbaristaCommand posts an ephemeral message 1`] = `
Array [
  Object {
    "attachments": Array [
      Object {
        "blocks": Array [
          Object {
            "text": Object {
              "text": "*Scrumbarista*
invoked with \\"/scrumbarista\\"
\\"randomPerson\\" and \\"randomOrder\\" arguments for picking random groups",
              "type": "mrkdwn",
            },
            "type": "section",
          },
        ],
        "color": "#2E68EC",
      },
      Object {
        "blocks": Array [
          Object {
            "text": Object {
              "text": "*Manage*
invoked with \\"/standup\\"
Opens a dialog to manage a stand up",
              "type": "mrkdwn",
            },
            "type": "section",
          },
        ],
        "color": "#ECB22E",
      },
      Object {
        "blocks": Array [
          Object {
            "text": Object {
              "text": "*Checkin*
invoked with \\"/checkin\\"
Opens a dialog to checkin and fulfull the daily stand up. Otherwise you will get a message in your DM at the alloted time",
              "type": "mrkdwn",
            },
            "type": "section",
          },
        ],
        "color": "#41BC88",
      },
    ],
    "channel": "channel",
    "user": "user",
  },
]
`;

exports[`The commands handlers standupCommand creates a standup when one doesn't exist for channel 1`] = `
Array [
  Object {
    "trigger_id": "trigger",
    "view": Object {
      "blocks": Array [
        Object {
          "block_id": "name",
          "element": Object {
            "action_id": "name",
            "initial_value": "name",
            "placeholder": Object {
              "text": "Enter a name for the stand-up",
              "type": "plain_text",
            },
            "type": "plain_text_input",
          },
          "label": Object {
            "emoji": true,
            "text": "Name",
            "type": "plain_text",
          },
          "type": "input",
        },
        Object {
          "block_id": "time",
          "element": Object {
            "action_id": "time",
            "initial_time": "09:00",
            "placeholder": Object {
              "emoji": true,
              "text": "Select time",
              "type": "plain_text",
            },
            "type": "timepicker",
          },
          "label": Object {
            "emoji": true,
            "text": "Time",
            "type": "plain_text",
          },
          "type": "input",
        },
        Object {
          "accessory": Object {
            "action_id": "tz",
            "options": Array [
              Object {
                "text": Object {
                  "text": "GMT",
                  "type": "plain_text",
                },
                "value": "GMT",
              },
              Object {
                "text": Object {
                  "text": "UTC",
                  "type": "plain_text",
                },
                "value": "UTC",
              },
              Object {
                "text": Object {
                  "text": "ECT",
                  "type": "plain_text",
                },
                "value": "ECT",
              },
              Object {
                "text": Object {
                  "text": "EET",
                  "type": "plain_text",
                },
                "value": "EET",
              },
              Object {
                "text": Object {
                  "text": "ART",
                  "type": "plain_text",
                },
                "value": "ART",
              },
              Object {
                "text": Object {
                  "text": "EAT",
                  "type": "plain_text",
                },
                "value": "EAT",
              },
              Object {
                "text": Object {
                  "text": "MET",
                  "type": "plain_text",
                },
                "value": "MET",
              },
              Object {
                "text": Object {
                  "text": "NET",
                  "type": "plain_text",
                },
                "value": "NET",
              },
              Object {
                "text": Object {
                  "text": "PLT",
                  "type": "plain_text",
                },
                "value": "PLT",
              },
              Object {
                "text": Object {
                  "text": "IST",
                  "type": "plain_text",
                },
                "value": "IST",
              },
              Object {
                "text": Object {
                  "text": "BST",
                  "type": "plain_text",
                },
                "value": "BST",
              },
              Object {
                "text": Object {
                  "text": "VST",
                  "type": "plain_text",
                },
                "value": "VST",
              },
              Object {
                "text": Object {
                  "text": "CTT",
                  "type": "plain_text",
                },
                "value": "CTT",
              },
              Object {
                "text": Object {
                  "text": "JST",
                  "type": "plain_text",
                },
                "value": "JST",
              },
              Object {
                "text": Object {
                  "text": "ACT",
                  "type": "plain_text",
                },
                "value": "ACT",
              },
              Object {
                "text": Object {
                  "text": "AET",
                  "type": "plain_text",
                },
                "value": "AET",
              },
              Object {
                "text": Object {
                  "text": "SST",
                  "type": "plain_text",
                },
                "value": "SST",
              },
              Object {
                "text": Object {
                  "text": "NST",
                  "type": "plain_text",
                },
                "value": "NST",
              },
              Object {
                "text": Object {
                  "text": "MIT",
                  "type": "plain_text",
                },
                "value": "MIT",
              },
              Object {
                "text": Object {
                  "text": "HST",
                  "type": "plain_text",
                },
                "value": "HST",
              },
              Object {
                "text": Object {
                  "text": "AST",
                  "type": "plain_text",
                },
                "value": "AST",
              },
              Object {
                "text": Object {
                  "text": "PST",
                  "type": "plain_text",
                },
                "value": "PST",
              },
              Object {
                "text": Object {
                  "text": "PNT",
                  "type": "plain_text",
                },
                "value": "PNT",
              },
              Object {
                "text": Object {
                  "text": "MST",
                  "type": "plain_text",
                },
                "value": "MST",
              },
              Object {
                "text": Object {
                  "text": "CST",
                  "type": "plain_text",
                },
                "value": "CST",
              },
              Object {
                "text": Object {
                  "text": "EST",
                  "type": "plain_text",
                },
                "value": "EST",
              },
              Object {
                "text": Object {
                  "text": "IET",
                  "type": "plain_text",
                },
                "value": "IET",
              },
              Object {
                "text": Object {
                  "text": "PRT",
                  "type": "plain_text",
                },
                "value": "PRT",
              },
              Object {
                "text": Object {
                  "text": "CNT",
                  "type": "plain_text",
                },
                "value": "CNT",
              },
              Object {
                "text": Object {
                  "text": "AGT",
                  "type": "plain_text",
                },
                "value": "AGT",
              },
              Object {
                "text": Object {
                  "text": "BET",
                  "type": "plain_text",
                },
                "value": "BET",
              },
              Object {
                "text": Object {
                  "text": "CAT",
                  "type": "plain_text",
                },
                "value": "CAT",
              },
            ],
            "placeholder": Object {
              "text": "Select tz",
              "type": "plain_text",
            },
            "type": "static_select",
          },
          "block_id": "tz",
          "text": Object {
            "text": "Pick a Timezone",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        Object {
          "accessory": Object {
            "action_id": "days",
            "initial_options": Array [
              Object {
                "text": Object {
                  "text": "Monday",
                  "type": "plain_text",
                },
                "value": "monday",
              },
            ],
            "options": Array [
              Object {
                "text": Object {
                  "text": "Monday",
                  "type": "plain_text",
                },
                "value": "monday",
              },
              Object {
                "text": Object {
                  "text": "Tuesday",
                  "type": "plain_text",
                },
                "value": "tuesday",
              },
              Object {
                "text": Object {
                  "text": "Wednesday",
                  "type": "plain_text",
                },
                "value": "wednesday",
              },
              Object {
                "text": Object {
                  "text": "Thursday",
                  "type": "plain_text",
                },
                "value": "thursday",
              },
              Object {
                "text": Object {
                  "text": "Friday",
                  "type": "plain_text",
                },
                "value": "friday",
              },
              Object {
                "text": Object {
                  "text": "Saturday",
                  "type": "plain_text",
                },
                "value": "saturday",
              },
              Object {
                "text": Object {
                  "text": "Sunday",
                  "type": "plain_text",
                },
                "value": "sunday",
              },
            ],
            "placeholder": Object {
              "text": "Select items",
              "type": "plain_text",
            },
            "type": "multi_static_select",
          },
          "block_id": "days",
          "text": Object {
            "text": "Pick Stand-Up Days",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        Object {
          "block_id": "questions",
          "element": Object {
            "action_id": "questions",
            "initial_value": "questions",
            "multiline": true,
            "type": "plain_text_input",
          },
          "label": Object {
            "emoji": true,
            "text": "Questions",
            "type": "plain_text",
          },
          "type": "input",
        },
        Object {
          "elements": Array [
            Object {
              "text": "Enter questions separated by linebreak; You can use {last_checkin} for the last checkin date.",
              "type": "plain_text",
            },
          ],
          "type": "context",
        },
      ],
      "callback_id": "standup",
      "private_metadata": "{\\"channelId\\":\\"channel\\"}",
      "submit": Object {
        "text": "Submit",
        "type": "plain_text",
      },
      "title": Object {
        "text": "Configure Standup",
        "type": "plain_text",
      },
      "type": "modal",
    },
  },
]
`;

exports[`The commands handlers standupCommand uses a pre-existing standup to create modal 1`] = `
Array [
  Object {
    "trigger_id": "trigger",
    "view": Object {
      "blocks": Array [
        Object {
          "block_id": "name",
          "element": Object {
            "action_id": "name",
            "initial_value": "",
            "placeholder": Object {
              "text": "Enter a name for the stand-up",
              "type": "plain_text",
            },
            "type": "plain_text_input",
          },
          "label": Object {
            "emoji": true,
            "text": "Name",
            "type": "plain_text",
          },
          "type": "input",
        },
        Object {
          "block_id": "time",
          "element": Object {
            "action_id": "time",
            "initial_time": "09:00",
            "placeholder": Object {
              "emoji": true,
              "text": "Select time",
              "type": "plain_text",
            },
            "type": "timepicker",
          },
          "label": Object {
            "emoji": true,
            "text": "Time",
            "type": "plain_text",
          },
          "type": "input",
        },
        Object {
          "accessory": Object {
            "action_id": "tz",
            "options": Array [
              Object {
                "text": Object {
                  "text": "GMT",
                  "type": "plain_text",
                },
                "value": "GMT",
              },
              Object {
                "text": Object {
                  "text": "UTC",
                  "type": "plain_text",
                },
                "value": "UTC",
              },
              Object {
                "text": Object {
                  "text": "ECT",
                  "type": "plain_text",
                },
                "value": "ECT",
              },
              Object {
                "text": Object {
                  "text": "EET",
                  "type": "plain_text",
                },
                "value": "EET",
              },
              Object {
                "text": Object {
                  "text": "ART",
                  "type": "plain_text",
                },
                "value": "ART",
              },
              Object {
                "text": Object {
                  "text": "EAT",
                  "type": "plain_text",
                },
                "value": "EAT",
              },
              Object {
                "text": Object {
                  "text": "MET",
                  "type": "plain_text",
                },
                "value": "MET",
              },
              Object {
                "text": Object {
                  "text": "NET",
                  "type": "plain_text",
                },
                "value": "NET",
              },
              Object {
                "text": Object {
                  "text": "PLT",
                  "type": "plain_text",
                },
                "value": "PLT",
              },
              Object {
                "text": Object {
                  "text": "IST",
                  "type": "plain_text",
                },
                "value": "IST",
              },
              Object {
                "text": Object {
                  "text": "BST",
                  "type": "plain_text",
                },
                "value": "BST",
              },
              Object {
                "text": Object {
                  "text": "VST",
                  "type": "plain_text",
                },
                "value": "VST",
              },
              Object {
                "text": Object {
                  "text": "CTT",
                  "type": "plain_text",
                },
                "value": "CTT",
              },
              Object {
                "text": Object {
                  "text": "JST",
                  "type": "plain_text",
                },
                "value": "JST",
              },
              Object {
                "text": Object {
                  "text": "ACT",
                  "type": "plain_text",
                },
                "value": "ACT",
              },
              Object {
                "text": Object {
                  "text": "AET",
                  "type": "plain_text",
                },
                "value": "AET",
              },
              Object {
                "text": Object {
                  "text": "SST",
                  "type": "plain_text",
                },
                "value": "SST",
              },
              Object {
                "text": Object {
                  "text": "NST",
                  "type": "plain_text",
                },
                "value": "NST",
              },
              Object {
                "text": Object {
                  "text": "MIT",
                  "type": "plain_text",
                },
                "value": "MIT",
              },
              Object {
                "text": Object {
                  "text": "HST",
                  "type": "plain_text",
                },
                "value": "HST",
              },
              Object {
                "text": Object {
                  "text": "AST",
                  "type": "plain_text",
                },
                "value": "AST",
              },
              Object {
                "text": Object {
                  "text": "PST",
                  "type": "plain_text",
                },
                "value": "PST",
              },
              Object {
                "text": Object {
                  "text": "PNT",
                  "type": "plain_text",
                },
                "value": "PNT",
              },
              Object {
                "text": Object {
                  "text": "MST",
                  "type": "plain_text",
                },
                "value": "MST",
              },
              Object {
                "text": Object {
                  "text": "CST",
                  "type": "plain_text",
                },
                "value": "CST",
              },
              Object {
                "text": Object {
                  "text": "EST",
                  "type": "plain_text",
                },
                "value": "EST",
              },
              Object {
                "text": Object {
                  "text": "IET",
                  "type": "plain_text",
                },
                "value": "IET",
              },
              Object {
                "text": Object {
                  "text": "PRT",
                  "type": "plain_text",
                },
                "value": "PRT",
              },
              Object {
                "text": Object {
                  "text": "CNT",
                  "type": "plain_text",
                },
                "value": "CNT",
              },
              Object {
                "text": Object {
                  "text": "AGT",
                  "type": "plain_text",
                },
                "value": "AGT",
              },
              Object {
                "text": Object {
                  "text": "BET",
                  "type": "plain_text",
                },
                "value": "BET",
              },
              Object {
                "text": Object {
                  "text": "CAT",
                  "type": "plain_text",
                },
                "value": "CAT",
              },
            ],
            "placeholder": Object {
              "text": "Select tz",
              "type": "plain_text",
            },
            "type": "static_select",
          },
          "block_id": "tz",
          "text": Object {
            "text": "Pick a Timezone",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        Object {
          "accessory": Object {
            "action_id": "days",
            "options": Array [
              Object {
                "text": Object {
                  "text": "Monday",
                  "type": "plain_text",
                },
                "value": "monday",
              },
              Object {
                "text": Object {
                  "text": "Tuesday",
                  "type": "plain_text",
                },
                "value": "tuesday",
              },
              Object {
                "text": Object {
                  "text": "Wednesday",
                  "type": "plain_text",
                },
                "value": "wednesday",
              },
              Object {
                "text": Object {
                  "text": "Thursday",
                  "type": "plain_text",
                },
                "value": "thursday",
              },
              Object {
                "text": Object {
                  "text": "Friday",
                  "type": "plain_text",
                },
                "value": "friday",
              },
              Object {
                "text": Object {
                  "text": "Saturday",
                  "type": "plain_text",
                },
                "value": "saturday",
              },
              Object {
                "text": Object {
                  "text": "Sunday",
                  "type": "plain_text",
                },
                "value": "sunday",
              },
            ],
            "placeholder": Object {
              "text": "Select items",
              "type": "plain_text",
            },
            "type": "multi_static_select",
          },
          "block_id": "days",
          "text": Object {
            "text": "Pick Stand-Up Days",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        Object {
          "block_id": "questions",
          "element": Object {
            "action_id": "questions",
            "initial_value": "",
            "multiline": true,
            "type": "plain_text_input",
          },
          "label": Object {
            "emoji": true,
            "text": "Questions",
            "type": "plain_text",
          },
          "type": "input",
        },
        Object {
          "elements": Array [
            Object {
              "text": "Enter questions separated by linebreak; You can use {last_checkin} for the last checkin date.",
              "type": "plain_text",
            },
          ],
          "type": "context",
        },
      ],
      "callback_id": "standup",
      "private_metadata": "{\\"channelId\\":\\"channel\\"}",
      "submit": Object {
        "text": "Submit",
        "type": "plain_text",
      },
      "title": Object {
        "text": "Configure Standup",
        "type": "plain_text",
      },
      "type": "modal",
    },
  },
]
`;
